FIX: Update scrollbar styles for news container

--- a/css/style.css
+++ b/css/style.css
@@ -606,9 +606,17 @@ blockquote {
 }
 
 .news-container::-webkit-scrollbar-thumb {
-    background-color: #ccccccaa;
+    background-color: #cccccc7c;
     border-bottom-left-radius: 50px;
     border-bottom-right-radius: 50px;
+}
+
+.news-container::-webkit-scrollbar-thumb:hover {
+    background-color: #ccccccb4;
+}
+
+.news-container::-webkit-scrollbar-thumb:active {
+    background-color: #cccccc;
 }
 
 .news-container::-webkit-scrollbar-track {
